codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__side_close_prompt.snap
---
source: tui/src/chatwidget/tests/side.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"  Close side conversation                                                       "
"  Choose what to do with this ephemeral side thread.                            "
"                                                                                "
"                                                                                "
"› 1. Cancel (default)  Return to the side conversation.                         "
"  2. Summarize         Ask the side agent for a summary and save it to the      "
"                       parent.                                                  "
"  3. Summarize for me  Save the summary as a note to self in the parent.        "
"  4. Leave             Discard the side conversation without saving a summary.  "
"                                                                                "
"  enter select · esc back                                                       "
